; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-close-reset.c_do_close.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-close-reset.c_do_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shutdown_before_close = common dso_local global i32 0, align 4
@shutdown_req = common dso_local global i32 0, align 4
@shutdown_cb = common dso_local global i32 0, align 4
@UV_EINVAL = common dso_local global i64 0, align 8
@close_cb = common dso_local global i32 0, align 4
@UV_ENOTCONN = common dso_local global i64 0, align 8
@tcp_server = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @do_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_close(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @shutdown_before_close, align 4
  %4 = icmp eq i32 %3, 1
  br i1 %4, label %5, label %19

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @shutdown_cb, align 4
  %8 = call i64 @uv_shutdown(i32* @shutdown_req, i32* %6, i32 %7)
  %9 = icmp eq i64 0, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  %12 = load i64, i64* @UV_EINVAL, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = load i32, i32* @close_cb, align 4
  %15 = call i64 @uv_tcp_close_reset(i32* %13, i32 %14)
  %16 = icmp eq i64 %12, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @ASSERT(i32 %17)
  br label %33

19:                                               ; preds = %1
  %20 = load i32*, i32** %2, align 8
  %21 = load i32, i32* @close_cb, align 4
  %22 = call i64 @uv_tcp_close_reset(i32* %20, i32 %21)
  %23 = icmp eq i64 0, %22
  %24 = zext i1 %23 to i32
  %25 = call i32 @ASSERT(i32 %24)
  %26 = load i64, i64* @UV_ENOTCONN, align 8
  %27 = load i32*, i32** %2, align 8
  %28 = load i32, i32* @shutdown_cb, align 4
  %29 = call i64 @uv_shutdown(i32* @shutdown_req, i32* %27, i32 %28)
  %30 = icmp eq i64 %26, %29
  %31 = zext i1 %30 to i32
  %32 = call i32 @ASSERT(i32 %31)
  br label %33

33:                                               ; preds = %19, %5
  %34 = call i32 @uv_close(i32* @tcp_server, i32* null)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @uv_shutdown(i32*, i32*, i32) #1

declare dso_local i64 @uv_tcp_close_reset(i32*, i32) #1

declare dso_local i32 @uv_close(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
